--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Noto+Sans:wght@400;700&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 
 * {
     margin: 0;
@@ -10,14 +8,92 @@
 }
 
 body {
-    background-color: black;
+    color: white;
+    background-color: rgb(0, 0, 0);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     height: 100vh;
 }
 
 .tela-principal {
     max-width: 1280px;
-    margin: 0 auto;
+    margin-left: 50px;
+    margin-right: 50px;
 }
-.logo {
+
+.flex {
+    display: flex;
+}
+
+header {
+    padding-left: 25px;
+}
+
+header > .tela-principal {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+header a {
     color: white;
+    text-decoration: none;
+    display: inline-block;
+}
+
+header a:hover {
+    color: #00fff2;
+    transform: scale(1.10);
+    transition: 0.2s;
+}
+
+header nav ul {
+    list-style-type: none;
+    padding-right: 0px;
+}
+
+header nav ul li {
+    font-size: 20px;
+    font-weight: 500;
+    display: inline-block;
+    padding: 0 50px;
+}
+
+section.interface-principal {
+    padding: 50px 5%;
+}
+
+section.interface-principal.flex {
+    align-items: center;
+    justify-content: center;
+}
+
+.inicio-site > h1{
+    color: #00fff2;
+    font-size: 50px;
+    line-height: 68px;
+}
+
+.inicio-site > p {
+    color: white;
+    font-size: 20px;
+    margin: 40px 0px;
+}
+
+.btn-contato {
+    color: #00fff2;
+    background-color: black;
+    border: 2px solid #00fff2;
+    padding: 10px 35px;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.btn-contato:hover {
+    color: black;
+    background-color: #00fff2;
+    transform: scale(1.10);
+    transition: 0.2s;
 }
