--- a/style.css
+++ b/style.css
@@ -25,8 +25,16 @@ body {
 }
 
 header {
-    padding: 25px 0px 80px 50px ;
-    
+    padding: 25px 10px 80px 50px;
+    padding-bottom: 5px;
+    padding-top: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000000; /* Cor de fundo desejada */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra opcional */
+    z-index: 100; /* Ajuste o valor do índice z conforme necessário para empilhar elementos corretamente */
 }
 
 header > .tela-principal {
@@ -74,13 +82,14 @@ section.interface-principal.flex01 {
     color: #00fff2;
     font-size: 50px;
     line-height: 68px;
+    padding-top: 250px;
 }
 
 .inicio-site > p {
     color: white;
     font-size: 20px;
     margin: 40px 0px;
-    padding-top: 28px;
+    padding-top: 0px;
     padding-right: 100px;
     padding-bottom: 30px;
 }
@@ -103,6 +112,10 @@ section.interface-principal.flex01 {
     transition: 0.2s;
 }
 
+.perfil-img-nome > img{
+    padding-top: 200px;
+}
+
 .perfil-img-nome > p.descricao-perfil {
     color: #ffffff;
     font-size: 18px;
@@ -114,6 +127,7 @@ section.interface-principal.flex01 {
 
 section.sobre-mim {
     padding: 32px 5%;
+    padding-top: 80px;
 }
 
 .flex02 {
