--- a/style.css
+++ b/style.css
@@ -29,12 +29,10 @@ header {
     padding-bottom: 5px;
     padding-top: 10px;
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
-    background-color: #000000; /* Cor de fundo desejada */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra opcional */
-    z-index: 100; /* Ajuste o valor do índice z conforme necessário para empilhar elementos corretamente */
+    background-color: #000000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 100;
 }
 
 header > .tela-principal {
