--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     margin-right: 50px;
 }
 
-.flex01 {
+.flex {
     display: flex;
 }
 
@@ -70,7 +70,7 @@ section.interface-principal {
     padding: 50px 5%;
 }
 
-section.interface-principal.flex01 {
+section.interface-principal.flex {
     align-items: center;
     justify-content: center;
     gap: 90px;
@@ -93,9 +93,6 @@ section.interface-principal.flex01 {
     padding-bottom: 30px;
 }
 
-.btn-social {
-  
-}
 
 .btn-social > a {
     display: inline-flex;
@@ -112,6 +109,11 @@ section.interface-principal.flex01 {
     margin: 0 25px 0px 30px;
 }
 
+.btn-social > a:hover {
+    transform: scale(1.10);
+    transition: 0.2s;
+}
+
 .perfil-img-nome > img{
     padding-top: 200px;
 }
@@ -119,7 +121,6 @@ section.interface-principal.flex01 {
 .perfil-img-nome > p.descricao-perfil {
     color: #ffffff;
     font-size: 18px;
-    
     margin-left: 90px;
     padding-top: 10px;
     border-right: 4px black, solid;
@@ -136,11 +137,7 @@ section.sobre-mim {
     padding-top: 80px;
 }
 
-.flex02 {
-    display: flex;
-}
-
-section.sobre-mim.flex02 {
+section.sobre-mim.flex {
     align-items: center;
     justify-content: center;   
 }
@@ -186,6 +183,34 @@ section.sobre-mim.flex02 {
 .soft-skills > h3 {
     color: #00fff2;
     padding-bottom: 10px;
+}
+
+/*projetos*/
+
+section.projetos {
+    padding: 80px 4%;
+    box-shadow: 0 0 40px 10px #00fff234;
+}
+
+section.projetos .flex {
+    justify-content: space-around;
+}
+
+.amostras > h2 {
+    color: #00fff2;
+    text-align: center;
+    padding-bottom: 60px;
+}
+
+.img-port {
+    width: 500px;
+    height: 500px;
+    background-color: #00fff2;
+}
+
+.img-port:hover {
+    transform: scale(1.10);
+    transition: 0.2s;
 }
 
 @keyframes digitando-nome {
