--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ section.interface-principal.flex {
 
 .perfil-img-nome > p.descricao-perfil {
     color: #ffffff;
-    font-size: 18px;
-    margin-left: 90px;
+    font-size: 22px;
+    margin-left: 75px;
     padding-top: 10px;
     border-right: 4px black, solid;
     width: 21ch;
@@ -160,7 +160,6 @@ section.sobre-mim.flex {
     text-align: justify;
     margin: 30px 0px;
     padding-right: 100px;
-    margin: 20px;
 }
 
 .habilidades {
@@ -189,13 +188,27 @@ section.sobre-mim.flex {
 
 section.projetos .flex {
     justify-content: space-around;
-    margin-left: 65px;
+    margin-left: 100px;
+    padding-bottom: 150px;
 }
 
 .amostras > h2 {
     color: #00fff2;
-    text-align: center;
     padding-bottom: 50px;
+    padding-left: 180px;
+}
+
+.container-descricao {
+    text-align: justify;
+    display: inline-block;
+    width: 100%;
+    padding-right: 120px;
+}
+
+.container-descricao > p {
+    font-size: 15px;
+    text-align: justify;
+    padding-top: 35px;
 }
 
 .img-port {
@@ -207,6 +220,56 @@ section.projetos .flex {
 .img-port:hover {
     transform: scale(1.10);
     transition: 0.2s;
+}
+
+/*formacoes*/
+
+ section .formacoes .educacao {
+    margin-left: 100px;
+}
+
+section.formacoes h2 {
+    color: #00fff2;
+    padding-bottom: 20px;
+}
+
+.instituicoes {
+    padding-left: 150px;
+    padding-right: 500px;
+}
+
+/* blog */
+
+section.blog {
+    max-width: 80%;
+    margin: 120px;
+    padding-top: 150px;
+}
+
+.artigo {
+    padding: 0px;
+}
+
+.artigo > h2 {
+    color: #00fff2;
+    padding-bottom:40px;
+}
+
+.artigo > h3 {
+    color: #00fff2;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-left: 100px;
+    padding-bottom: 20px;
+}
+
+.artigo > p {
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 1.6;
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    margin-left: 100px;
 }
 
 @keyframes digitando-nome {
