--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ section.sobre-mim.flex {
 }
 
 .habilidades {
+    font-size: 20px;
     max-width: 35%;
     padding-left: 12vh;
     padding-top: 70px;
@@ -174,6 +175,7 @@ section.sobre-mim.flex {
 }
 
 .soft-skills {
+    font-size: 20px;
     max-width: 25%;
     padding-left: 15vh;
     padding-top: 70px;
@@ -234,8 +236,13 @@ section.formacoes h2 {
 }
 
 .instituicoes {
+    font-size: 20px;
     padding-left: 150px;
     padding-right: 500px;
+}
+
+.certificacoes {
+    font-size: 20px;
 }
 
 /* blog */
@@ -265,7 +272,7 @@ section.blog {
 
 .artigo > p {
     color: #ffffff;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.6;
     padding-bottom: 20px;
     margin-bottom: 15px;
