Update  Section sobre Style.css

--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ section.interface-principal.flex {
 section.sobre-mim {
     padding: 32px 5%;
     padding-top: 80px;
+    padding-bottom: 100px;
 }
 
 section.sobre-mim.flex {
